// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize link 1`] = `
Object {
  "children": Array [
    Object {
      "text": "Personal website",
    },
  ],
  "type": "link",
  "url": "https://jackhanford.com",
}
`;

exports[`deserialize link with linkDestinationKey 1`] = `
Object {
  "children": Array [
    Object {
      "text": "Shopping",
    },
  ],
  "custom-value": "https://eaze.com",
  "type": "link",
}
`;
